crates/cli/src/snapshots/klyv__test__lib_rs_generated_lib.rs.snap
---
source: crates/cli/src/test.rs
expression: content
---
mod types;
mod logic;

pub mod prelude {
    pub use crate::types::*;
    pub use crate::logic::*;
}

use prelude::*;

use log::info;
use indexmap::IndexMap;
use std::fmt::Display;
