crates/cli/src/snapshots/klyv__test__lib_rs_generated_types_identifiable.rs.snap
---
source: crates/cli/src/test.rs
expression: content
---
use crate::prelude::*;

/// Trait for items that can be identified
pub trait Identifiable {
    fn id(&self) -> u32;
}
