crates/cli/src/snapshots/klyv__test__lib_rs_generated_types_mod.rs.snap
---
source: crates/cli/src/test.rs
expression: content
---
mod identifiable;
mod role;
mod status;
mod user;
mod validatable;

pub use identifiable::*;
pub use role::*;
pub use status::*;
pub use user::*;
pub use validatable::*;
