crates/cli/src/snapshots/klyv__test__lib_rs_generated_types_status.rs.snap
---
source: crates/cli/src/test.rs
expression: content
---
use crate::prelude::*;

/// Current status of a user
#[derive(Debug)]
pub enum Status {
    Active,
    Inactive,
    Pending,
    Suspended,
}
