crates/cli/src/snapshots/klyv__test__lib_rs_generated_types_validatable.rs.snap
---
source: crates/cli/src/test.rs
expression: content
---
use crate::prelude::*;

/// Trait for items that can be validated
pub trait Validatable {
    fn is_valid(&self) -> bool;
}
