crates/cli/src/snapshots/klyv__test__magic_trait_file.snap
---
source: crates/cli/src/test.rs
expression: content
---
use std::str::FromStr;


pub trait MagicTrait: Clone + std::fmt::Debug {
    /// Magic
    fn trait_magic() -> u8 {
        42
    }
    /// Magic self
    fn trait_magic_self(self) -> u8;
    /// Magic self ref
    fn trait_magic_self_ref(&self) -> u8;
    /// Magic self ref mut
    fn trait_magic_self_ref_mut(&mut self) -> u8;
    /// Magic self ref arg
    fn trait_magic_self_ref_arg(&self, magic: u8) -> u8;
}
