crates/cli/src/snapshots/klyv__test__magic_type_file.snap
---
source: crates/cli/src/test.rs
expression: content
---
use crate::prelude::*;

pub type Magic = u8;
