crates/cli/src/snapshots/klyv__test__main_rs_special_document_metadata.snap
---
source: crates/cli/src/test.rs
expression: content
---
use crate::prelude::*;

#[derive(Debug, Clone, Default)]
pub struct DocumentMetadata {
    pub created_at: Option<String>,
    pub author: Option<String>,
    pub tags: Vec<String>,
}
