crates/cli/src/snapshots/klyv__test__nested_file_splitting_deep_foo.snap
---
source: crates/cli/src/test.rs
expression: deep_foo_content
---
use crate::prelude::*;

pub enum DeepFoo {
    Variant1,
    Variant2,
}

impl DeepFoo {
    pub fn new() -> Self {
        DeepFoo::Variant1
    }

    pub fn do_something(&self) {
        match self {
            DeepFoo::Variant1 => println!("Doing something for Variant1"),
            DeepFoo::Variant2 => println!("Doing something for Variant2"),
        }
    }
}

impl Display for DeepFoo {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        match self {
            DeepFoo::Variant1 => write!(f, "DeepFoo::Variant1"),
            DeepFoo::Variant2 => write!(f, "DeepFoo::Variant2"),
        }
    }
}
